feat: add header structure

--- a/fickle-flight.html
+++ b/fickle-flight.html
@@ -3,8 +3,24 @@
     <head>
         <meta charset="utf-8">
         <title>fickle-flight</title> 
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body>
-        <h1>Hello world!</h1>
+    <body class="body">
+        <header class="hedeer">
+            <div>
+                <button class="image-logo">
+                    <img src="Fickleflight Logo.svg" >
+                </button>
+            </div>
+            <div>
+                <button class="box">Explore</button>
+                <button class="box">Search</button>
+                <button class="box">Hotels</button>
+                <button class="box">Offers</button>
+            </div>
+                
+
+        </header>
     </body>
 </html>
+
