fit: functioning header buttons

--- a/fickle-flight.html
+++ b/fickle-flight.html
@@ -5,22 +5,23 @@
         <title>fickle-flight</title> 
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body class="body">
-        <header class="hedeer">
+    <body>
+        <header>
             <div>
-                <button class="image-logo">
-                    <img src="Fickleflight Logo.svg" >
+                <button class="homeButten">
+                    <img src="Fickleflight Logo.svg"  class="image-logo">
                 </button>
             </div>
             <div>
-                <button class="box">Explore</button>
-                <button class="box">Search</button>
-                <button class="box">Hotels</button>
-                <button class="box">Offers</button>
-            </div>
-                
-
+                <button class="buttonHeader disabled">Explore</button>
+                <button class="buttonHeader">Search</button>
+                <button class="buttonHeader">Hotels</button>
+                <button class="buttonHeader">Offers</button>
+            </div>   
         </header>
+        <div>
+            <img src="Banner  Background.png" class="homePage">
+        </div>
     </body>
 </html>
 
